--- a/GarageBidAndroid/res/values/strings.xml
+++ b/GarageBidAndroid/res/values/strings.xml
@@ -7,6 +7,7 @@
     
     <string name="title_activity_about">About</string>
     <string name="title_activity_count_event">Event Counts</string>
+    <string name="title_activity_event_listview">List of Event Streets</string>
     
     <string name="main_title_text">Garage Bid</string>
     <string name="about_text">About Garage Bid</string>
@@ -15,4 +16,5 @@
     
     <string name="label_button_about">About</string>
     <string name="label_button_count_event">Count Events</string>
+    <string name="label_button_list_event">List Events Street</string>
 </resources>
